修改了一些配置, 再次尝试自动化部署

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hx-loli-hub",
-  "version": "0.1.0",
+  "name": "hx-loli",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
