新增あなた、本当に怠慢ですね博客一篇

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 *.ts linguist-language=TypeScript
 *.tsx linguist-language=TypeScript
+*.md linguist-language=MarkDown
 
 static/katex/ linguist-vendored
 static/katex/** linguist-vendored
