--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -32,3 +32,8 @@ python:
   label: '刷题'
   permalink: '/刷题'
   description: '刷题的一些记录, 大部分应该存放在笔记的; 但是如果是记录性质的, 那么会放到博客~'
+
+C++:
+  label: 'C++'
+  permalink: '/C++'
+  description: 'C++小知识'
