--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/theme-live-codeblock": "^3.7.0",
     "@docusaurus/theme-mermaid": "^3.7.0",
     "@docusaurus/utils": "^3.7.0",
+    "@easyops-cn/docusaurus-search-local": "^0.49.2",
     "@giscus/react": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
     "@monaco-editor/react": "^4.7.0",
