--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "remark": "^15.0.1",
     "remark-github-alerts": "^0.1.1",
     "remark-math": "^6.0.0",
+    "swiper": "^11.2.8",
     "tailwindcss": "^3.4.12",
     "unist-util-visit": "^5.0.0",
     "zustand": "^5.0.3"
