新增opengl的初始化api笔记

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
         "DLSS",
+        "glfw",
+        "GLSL",
         "GPGPU",
-        "purecpp"
+        "purecpp",
+        "RAII"
     ]
 }
